[package]
name = "wasamix"
version = "0.1.0"
edition = "2024"
authors = ["Yakov Tchenak"]
description = "Windows system-tray mixer that blends microphone + system loopback audio into VB-Audio Virtual Cable."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ytchenak/wasamix"
homepage = "https://github.com/ytchenak/wasamix"
readme = "README.md"
keywords = ["audio", "wasapi", "mixer", "windows", "tray"]
categories = ["multimedia::audio", "gui", "os::windows-apis"]
default-run = "wasamix"

[dependencies]
# Windows audio API (WASAPI) — device enumeration, capture, render, loopback
wasapi = "0.16"

# System tray icon
tray-icon = "0.22"

# Native context menus for the tray
muda = "0.17"

# Event loop needed by tray-icon on Windows
winit = "0.30"

# JSON config serialization — Rust's standard for structured data
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Structured logging — modern replacement for println! debugging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling — lets us combine different error types easily
anyhow = "1"

# Windows-specific APIs for COM initialization
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_System_Com"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
